# rules_sops

./: .gitattributes  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  release.yml  release_prep.sh  test.yaml
docs/: BUILD.bazel  rules.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  unencrypted.yaml
sops/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
sops/private/: BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
sops/tests/: versions_test.bzl
