# Override http_archive for local testing
local_repository(
    name = "rules_sops",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_sops setup #
######################
# Fetches the rules_sops dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_sops//sops:repositories.bzl", "rules_sops_dependencies", "sops_register_toolchains")

rules_sops_dependencies()

sops_register_toolchains(
    name = "sops",
    sops_version = "3.8.1",
)
